--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>Plant a Tree, Grow a Future</h1>
         <p>
           Join our mission to plant 1 million trees and make the Earth greener
-          for future generations.
+          for future <br />generations.
         </p>
         <a href="#" class="button yellow-button">Get Involved</a>
       </div>
@@ -158,21 +158,15 @@
         <h3>Your Cart</h3>
         <div class="cart-item">
           <div>
-            <strong>Mango Tree</strong>
-            <p>৳500 × 1</p>
+            <strong></strong>
+            <p></p>
           </div>
           <button class="remove-btn">×</button>
         </div>
-        <div class="cart-item">
-          <div>
-            <strong>Guava Tree</strong>
-            <p>৳500 × 1</p>
-          </div>
-          <button class="remove-btn">×</button>
-        </div>
+
         <div class="cart-total">
           <strong>Total:</strong>
-          <span>৳1000</span>
+          <span></span>
         </div>
       </aside>
     </div>
@@ -231,5 +225,7 @@
       </form>
       <footer class="footer">© 2025 Green Earth. All Rights Reserved.</footer>
     </section>
+    <!--  -->
+    <script src="js/script.js"></script>
   </body>
 </html>
